2002-12-11  Brian Ford  <ford@vss.fsi.com>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Properly quote AC_PACKAGE_TARNAME
	and AC_PACKAGE_VERSION.

2002-12-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (ANSI): Since Autoconf 2.54, LIBOBJ and LTLIBOBJ
	no longer have to be rewritten in order to support deansification.
	(Tests): Link to the DejaGnu manual.
	(Optional): Comment out FIXME.
	(Complete, A Library, LIBOBJS): Use $(LIBOBJ) and $(ALLOCA)
	instead of @LIBOBJ@ and @ALLOCA@.
	(Sources): Typo.

2002-12-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Strip
	directories from info filenames.
	* tests/texinfo13.test: Make sure main.info gets installed
	as $(infodir)/main.info.

	* automake.in (handle_dist): Do not define %GETTEXT% if the user
	is using $seen_gettext_external, this distcheck won't run
	`./configure' with a meaningless `--with-included-gettext'.
	* tests/gettext.test: Make sure distcheck uses --with-included-gettext.
	* tests/gettext2.test: Make sure distcheck does not use
	--with-included-gettext.

	* m4/ccstdc.m4: Define am_cv_prog_cc_stdc for backward
	compatibility and diagnose the use of AM_PROG_CC_STDC.
	* automake.texi (Public macros) <AM_PROG_CC_STDC>: Remove
	documentation, this macro is no longer supported.
	Reported by Kevin Ryde.

2002-12-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_languages): Test $objdir, not $srcdir, to
	decide whether a _.c file is in a subdirectory and has to be
	cleaned separately.
	Reported by Kevin Ryde.

	* tests/ansi10.test (liblib_a_LIBADD): Set ac_cv_prog_cc_stdc
	not am_cv_prog_cc_stdc.

	* automake.texi (Options): Some English nits from Eric Siegerman.
	(Sources): Rewrite the introduction and move the example to ...
	(Built sources example): ... this separate node.

	* automake.in (variable_pretty_output): Strip trailing
	backslashes in $val after $val is defined...
	Reported by Kevin Ryde.
