@@ -19,9 +19,11 @@
 # Boston, MA 02111-1307, USA.
 
 # Test for a special setup where the package's version isn't defined
-# in configure.in.
+# in configure.in.  We want GNU Make for this test (part of the test
+# is to make sure Makefile.ins get rebuilt when a m4_included file
+# changes -- we don't support this feature on non-GNU Makes).
 
-required='makeinfo tex'
+required='makeinfo tex GNUmake'
 . ./defs || exit 1
 
 set -e
